# bearImage

./: .gitignore  CMakeLists.txt  README.md  image.cpp  image.h  possion_solver.h  possion_stiching.cpp  possion_stiching.h  types.h  utility.hpp
assimilate/: main.cpp
assimilator/: main.cpp
include/: filter_convolution.hpp  image.h  possion_solver.h  possion_stiching.h  possion_stiching_dif.hpp  possion_wrap.h  types.h  utility.h
previewer/: down_semple.cpp  down_semple.h  main.cpp
src/: filter_convolution.hpp  image.cpp  possion_solver.cpp  possion_stiching.cpp  possion_stiching_dif.hpp  possion_wrap.cpp  utility.cpp
stich/: main.cpp
test/: main.cpp
validator/: main.cpp
vs2019/: .gitignore
vs2019/stich/: stich.sln  stich.vcxproj  stich.vcxproj.filters
